update code that fixes past operand alignment

--- a/style.css
+++ b/style.css
@@ -1,64 +1,68 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-shadow: none;
+  margin: 0;
+  padding: 0;
+  box-shadow: none;
 }
 
-body{
-	background: linear-gradient(90deg, rgba(82,89,135,1) 0%, rgba(107,71,126,1) 100%);
+body {
+  background: linear-gradient(
+    90deg,
+    rgba(82, 89, 135, 1) 0%,
+    rgba(107, 71, 126, 1) 100%
+  );
 }
 
-.calc-container{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 927px;
+.calc-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 927px;
 }
 
-.calculator{
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-auto-rows: 90px;
-	width: 400px;
+.calculator {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 90px;
+  width: 400px;
 }
 
-.display{
-	background: #323551;
-	display: flex;
-	flex-direction: column;
-	grid-column: 1/5;
-	justify-content: space-between;
-	padding: 5px 15px;
+.display {
+  background: #323551;
+  display: flex;
+  flex-direction: column;
+  grid-column: 1/5;
+  justify-content: space-between;
+  padding: 5px 15px;
 }
 
-.past-container{
-	display: flex;
-	justify-content: space-between;
+.past-container {
+  display: flex;
+  justify-content: end;
 }
 
-.past-value{
-	color: #e7ebf3;
-	font-size: 24px;
+.past-value {
+  color: #e7ebf3;
+  font-size: 24px;
 }
 
-.current-value{
-	color: #edf2f4;
-	display: flex;
-	font-size: 32px;
-	justify-content: end;
+.current-value {
+  color: #edf2f4;
+  display: flex;
+  font-size: 32px;
+  justify-content: end;
 }
 
-button{
-	color: #edf2f4;
-	border: none;
-	background: #2b2d42;
-	font-size: 32px;
+button {
+  color: #edf2f4;
+  border: none;
+  background: #2b2d42;
+  font-size: 32px;
 }
 
-button:nth-child(18){
-	grid-column: 1/3;
+button:nth-child(18) {
+  grid-column: 1/3;
 }
 
-button:hover{
-	background: #333657;
+button:hover {
+  background: #333657;
 }
